--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,13 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-loadingbar = "1.0.1"
+bincode = { version = "2.0.1", features = ["serde"] }
+byteorder = "1.5.0"
+indicatif = "0.17.11"
+memchr = "2.7.4"
 pnet = "0.35.0"
 rand = "0.9.0"
 rocksdb = "0.23.0"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+tokio = "1.44.2"
