--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,8 @@ rand = "0.9.0"
 regex = "1.11.1"
 rocksdb = "0.23.0"
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
+serde_json = { version = "1.0.140", features = ["std"] }
 tokio = "1.44.2"
+craftping = "0.7.0"
+sha256 = "1.6.0"
+rayon = "1.10.0"
